# jamac-product-updater

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  csv-mapper.py  docker-compose.yml  mapping.yaml  pyproject.toml
templates/: index.html
